Fix: Flickering on scroll stop animation

--- a/src/App.css
+++ b/src/App.css
@@ -71,9 +71,15 @@
     right: 10px;
 }
 
+/* crown */
 .crown-box {
     width: 40px;
     height: 40px;
     border: 1px solid white;
     background: lightseagreen;
+}
+
+.crown-box-content {
+    width: 100%;
+    height: 100%;
 }
