--- a/src/Crown/Crown.css
+++ b/src/Crown/Crown.css
@@ -2,6 +2,10 @@
     list-style: none;
     width: 100%;
     overflow-x: auto;
+    scrollbar-width: none;
+}
+.Crown::-webkit-scrollbar {
+    display: none;
 }
 
 .Crown-wrap {
@@ -10,6 +14,6 @@
     white-space: nowrap;
 }
 
-.Crown-wrap > * {
+.Crown-element {
     display: inline-block;
 }
